Adding a better config example

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -5,9 +5,17 @@ records:
       ttl: 0
       type: "A"
       data: "1.1.1.1"
+    - host: "willfind"
+      ttl: 0
+      type: "A"
+      data: "1.1.1.2"
     - host: "tmp2"
       ttl: 0
       type: "CNAME"
       data: "example.com."
+    - host: "wontfind"
+      ttl: 0
+      type: "CNAME"
+      data: "willfind.example.com."
 
 
